--- a/module-a/pom.xml
+++ b/module-a/pom.xml
@@ -7,19 +7,24 @@
     <!-- The Basics -->
     <!--<groupId>...</groupId>-->
     <artifactId>learn-module-a</artifactId>
-    <version>${parent.version}</version>
+    <version>1</version>
     <!--<packaging>...</packaging>-->
     <dependencies>
         <dependency>
             <groupId>${groupId}</groupId>
             <artifactId>learn-module-b</artifactId>
-            <version>${parent.version}</version>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>learn-module-c</artifactId>
+            <version>1</version>
         </dependency>
     </dependencies>
     <parent>
         <groupId>com.seanshubin.learn.module</groupId>
         <artifactId>learn-module-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>1</version>
     </parent>
     <!--<dependencyManagement>...</dependencyManagement>-->
     <!--<modules>...</modules>-->
