--- a/module-b/pom.xml
+++ b/module-b/pom.xml
@@ -7,13 +7,19 @@
     <!-- The Basics -->
     <!--<groupId>...</groupId>-->
     <artifactId>learn-module-b</artifactId>
-    <version>${parent.version}</version>
+    <version>1</version>
     <!--<packaging>...</packaging>-->
-    <!--<dependencies>...</dependencies>-->
+    <dependencies>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>learn-module-d</artifactId>
+            <version>1</version>
+        </dependency>
+    </dependencies>
     <parent>
         <groupId>com.seanshubin.learn.module</groupId>
         <artifactId>learn-module-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>1</version>
     </parent>
     <!--<dependencyManagement>...</dependencyManagement>-->
     <!--<modules>...</modules>-->
