--- a/module-a/pom.xml
+++ b/module-a/pom.xml
@@ -5,53 +5,39 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- The Basics -->
-    <!--<groupId>...</groupId>-->
+    <groupId>com.seanshubin.learn.module</groupId>
     <artifactId>learn-module-a</artifactId>
-    <version>1</version>
+    <version>1-SNAPSHOT</version>
     <!--<packaging>...</packaging>-->
     <dependencies>
         <dependency>
-            <groupId>${groupId}</groupId>
+            <groupId>com.seanshubin.learn.module</groupId>
             <artifactId>learn-module-b</artifactId>
-            <version>1</version>
+            <version>1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>${groupId}</groupId>
+            <groupId>com.seanshubin.learn.module</groupId>
             <artifactId>learn-module-c</artifactId>
-            <version>1</version>
+            <version>1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <parent>
-        <groupId>com.seanshubin.learn.module</groupId>
-        <artifactId>learn-module-parent</artifactId>
-        <version>1</version>
-    </parent>
+    <!--<parent>...</parent>-->
     <!--<dependencyManagement>...</dependencyManagement>-->
     <!--<modules>...</modules>-->
-    <!--<properties>...</properties>-->
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <!-- Build Settings -->
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
-                    <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.seanshubin.learn.module.a.MainA</mainClass>
-                        </transformer>
-                    </transformers>
+                    <source>1.9</source>
+                    <target>1.9</target>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
